# amdusias

./: .gitignore  CHANGELOG.md  CONCLAVE.sigil  CONTRIBUTING.md  Cargo.toml  LESSONS-LEARNED.md  README.md  SECURITY.md  Sigil.toml
.claude/: CLAUDE.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/amdusias/: Cargo.toml
crates/amdusias-core/: Cargo.toml
crates/amdusias-core/src/: buffer.rs  buffer.sg  error.rs  error.sg  format.rs  format.sg  lib.rs  lib.sg  queue.rs  queue.sg  schedule.rs  schedule.sg  simd.rs  simd.sg
crates/amdusias-dsp/: Cargo.toml
crates/amdusias-dsp/src/: biquad.rs  biquad.sg  compressor.rs  compressor.sg  delay.rs  delay.sg  envelope.rs  envelope.sg  lib.rs  lib.sg  limiter.rs  limiter.sg  reverb.rs  reverb.sg  traits.rs  traits.sg
crates/amdusias-graph/: Cargo.toml
crates/amdusias-graph/src/: connection.rs  connection.sg  error.rs  error.sg  graph.rs  graph.sg  lib.rs  lib.sg  node.rs  node.sg  processor.rs  processor.sg
crates/amdusias-graph/src/nodes/: gain.rs  gain.sg  io.rs  io.sg  mixer.rs  mixer.sg  mod.rs  mod.sg
crates/amdusias-hal/: Cargo.toml
crates/amdusias-hal/src/: config.rs  config.sg  device.rs  device.sg  error.rs  error.sg  lib.rs  lib.sg  stream.rs  stream.sg  traits.rs  traits.sg
crates/amdusias-hal/src/linux/: alsa.rs  alsa.sg  mod.rs  mod.sg
crates/amdusias-hal/src/macos/: coreaudio.rs  coreaudio.sg  mod.rs  mod.sg
crates/amdusias-hal/src/windows/: mod.rs  mod.sg  wasapi.rs  wasapi.sg
crates/amdusias-siren/: Cargo.toml
crates/amdusias-siren/benches/: voice_allocation.rs  voice_allocation.sg
crates/amdusias-siren/src/: articulation.rs  articulation.sg  drum.rs  drum.sg  guitar.rs  guitar.sg  instrument.rs  instrument.sg  lib.rs  lib.sg  player.rs  player.sg  sample.rs  sample.sg  voice.rs  voice.sg
crates/amdusias-web/: Cargo.toml
crates/amdusias-web/src/: lib.rs  lib.sg  message.rs  message.sg  processor.rs  processor.sg  worklet.rs  worklet.sg
crates/amdusias/src/: lib.rs  lib.sg
docs/: TDD-ROADMAP.md
docs/methodologies/: AGENT-TDD.md  COMPLIANCE-AUDITS.md  PROJECT-WELLNESS.md  SPEC-DRIVEN-DEVELOPMENT.md  SPEC-FORMATTING.md
