[package]
name = "amdusias-dsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "DSP primitives: filters, dynamics, delay, reverb, convolution"
keywords = ["audio", "dsp", "filter", "reverb", "compressor"]
categories = ["multimedia::audio", "algorithms"]

[features]
default = ["simd"]
simd = ["amdusias-core/simd"]

[dependencies]
amdusias-core.workspace = true

# Error handling
thiserror.workspace = true

# Containers
smallvec.workspace = true
arrayvec.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
rand.workspace = true
