[package]
name = "amdusias-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Audio graph: node routing, automatic latency compensation, topological sorting"
keywords = ["audio", "graph", "routing", "daw", "mixer"]
categories = ["multimedia::audio", "data-structures"]

[dependencies]
amdusias-core.workspace = true
amdusias-dsp.workspace = true

# Error handling
thiserror.workspace = true
tracing.workspace = true

# Graph data structures
slotmap.workspace = true
smallvec.workspace = true

[dev-dependencies]
criterion.workspace = true
rand.workspace = true
