[package]
name = "amdusias-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "WebAssembly audio engine for AudioWorklet integration"
keywords = ["audio", "wasm", "webassembly", "webaudio", "audioworklet"]
categories = ["multimedia::audio", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
amdusias-core = { workspace = true, default-features = false }
amdusias-dsp = { workspace = true, default-features = false }
amdusias-graph.workspace = true

# WASM bindings
wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys.workspace = true

# Better panic messages in browser console
console_error_panic_hook = { workspace = true, optional = true }

# Serialization for MessagePort communication
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true
